--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,11 +39,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:clickable="false"
+        android:clickable="true"
         android:backgroundTint="@color/red"
         app:borderWidth="0dp"
         app:fabCustomSize="100dp"
-        android:visibility="gone"
         android:contentDescription="@string/red_button_description" />
 
     <!-- your standard, much smaller, non-red button -->
@@ -73,15 +72,8 @@
         app:backgroundTint="@color/blue"
         app:borderWidth="0dp"
         app:fabCustomSize="101dp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:contentDescription="@string/other_button_description"/>
 
-    <!-- why is this here... it doesn't seem to be doing anything -->
-    <View
-        android:id="@+id/SUPER_SECRET_POWER_LEVEL_VIEW"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="9001dp"
-        android:visibility="visible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
